#set compiler
SET(CMAKE_CXX_COMPILER "g++")
#SET(CMAKE_CXX_COMPILER "icpc")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -openmp -openmp-link=static -mmic -vec -qopt-report=3 -O3")

#INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
#LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
message("OPENMP FOUND")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/bin)
ADD_EXECUTABLE(bfs BFS.cpp)
ADD_EXECUTABLE(sssp SSSP.cpp)
ADD_EXECUTABLE(pagerank PageRank.cpp)
ADD_EXECUTABLE(topsort TopSort.cpp)
ADD_EXECUTABLE(bellmanford BellmanFord.cpp)
ADD_EXECUTABLE(components Components.cpp)
ADD_EXECUTABLE(bc BC.cpp)
TARGET_LINK_LIBRARIES(bfs libphigraph.a)
TARGET_LINK_LIBRARIES(sssp libphigraph.a)
TARGET_LINK_LIBRARIES(pagerank libphigraph.a)
TARGET_LINK_LIBRARIES(topsort libphigraph.a)
TARGET_LINK_LIBRARIES(bellmanford libphigraph.a)
TARGET_LINK_LIBRARIES(components libphigraph.a)
TARGET_LINK_LIBRARIES(bc libphigraph.a)
