set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)

FILE(GLOB_RECURSE SRC_LIST "*.cpp")

message(STATUS "LIB_CPP = ${SRC_LIST}")



ADD_LIBRARY(phigraph STATIC ${SRC_LIST})

SET(CMAKE_INSTALL_PREFIX /usr/)

INSTALL(TARGETS phigraph ARCHIVE DESTINATION lib)
SET_TARGET_PROPERTIES(phigraph PROPERTIES VERSION 1.0 SOVERSION 1)
