set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)

FILE(GLOB_RECURSE SRC_LIST "*.cpp")

#SET(CMAKE_CXX_COMPILER "icpc")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -openmp -openmp-link=static -mmic -vec -qopt-report=3 -O3")

message(STATUS "LIB_CPP = ${SRC_LIST}")

FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
message("OPENMP FOUND")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

ADD_LIBRARY(phigraph STATIC ${SRC_LIST})

SET(CMAKE_INSTALL_PREFIX /usr/)

INSTALL(TARGETS phigraph ARCHIVE DESTINATION lib)
SET_TARGET_PROPERTIES(phigraph PROPERTIES VERSION 1.0 SOVERSION 1)
