cmake_minimum_required(VERSION 3.5)
PROJECT(GraphGen)
SET(CMAKE_C_COMPILER "g++")

FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
message("OPENMP FOUND")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

SET(SRC_LIST GraphGenerator.cpp )
LINK_DIRECTORIES(../lib)
ADD_EXECUTABLE(generator ${SRC_LIST})
ADD_EXECUTABLE(transpose csrtocsc.cpp)
TARGET_LINK_LIBRARIES(generator libphigraph.a)
TARGET_LINK_LIBRARIES(transpose libphigraph.a)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
ADD_SUBDIRECTORY(www)
